force-app/main/default/objects/TrailblazerCertification__c/TrailblazerCertification__c.object-meta.xml
<CustomObject>
    <label>Trailblazer Certification</label>
    <nameField>
        <label>Certification Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trailblazer Certifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>