force-app/main/default/objects/TrailblazerCertification__c/fields/CertificationImageUrl__c.field-meta.xml
<CustomField>
    <fullName>CertificationImageUrl__c</fullName>
    <label>Certification Image Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>