force-app/main/default/objects/TrailblazerCertification__c/fields/CertificationUrl__c.field-meta.xml
<CustomField>
    <fullName>CertificationUrl__c</fullName>
    <label>Certification Url</label>
    <type>Url</type>
</CustomField>