force-app/main/default/objects/TrailblazerCertification__c/fields/ExpiredAt__c.field-meta.xml
<CustomField>
    <fullName>ExpiredAt__c</fullName>
    <label>Expired at</label>
    <type>Date</type>
</CustomField>