force-app/main/default/objects/TrailblazerCertification__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This field is a compound key with the following pattern: &lt;TrailblazerId&gt;/&lt;title&gt;/&lt;title&gt; generated during record creation by integration service.</description>
    <externalId>true</externalId>
    <label>Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>